--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_ENDPOINT=http://localhost:3000
+NEXT_PUBLIC_API_ENDPOINT=/api/users/get
 #https://randomuser.me/api
 
 SECRET_KEY=secret
