--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ REDIS_HOST=redis://127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=password
 REDIS_USERNAME=default
+
+KV_URL="redis://******:******@zxcvbnm.upstash.io:6379"
+KV_REST_API_URL="https://zxcvbnm.upstash.io"
+KV_REST_API_TOKEN="********"
+KV_REST_API_READ_ONLY_TOKEN="********"
