--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 NEXT_PUBLIC_API_ENDPOINT=/api/users/get
 #https://randomuser.me/api
 
+# redis config
 SECRET_KEY=secret
 REDIS_HOST=redis://127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=password
 REDIS_USERNAME=default
-
+# KV config
 KV_URL="redis://******:******@zxcvbnm.upstash.io:6379"
 KV_REST_API_URL="https://zxcvbnm.upstash.io"
 KV_REST_API_TOKEN="********"
